refactored job queue to queue
