# app.py
@@ -7,59 +7,59 @@ from jt_jess.exceptions import OwnerNameNotFound, AMSNotAvailable, WorklowNotFou
 from connexion import NoContent
 
 
-def get_jobs(owner_name, job_queue_id, job_id=None, state=None):
-    return jt_jess.get_jobs(owner_name, job_queue_id, job_id, state) or ('No job found', 404)
+def get_jobs(owner_name, queue_id, job_id=None, state=None):
+    return jt_jess.get_jobs(owner_name, queue_id, job_id, state) or ('No job found', 404)
 
 
-def get_job(owner_name, job_queue_id, job_id, state=None):
-    jobs = get_jobs(owner_name, job_queue_id, job_id, state)
+def get_job(owner_name, queue_id, job_id, state=None):
+    jobs = get_jobs(owner_name, queue_id, job_id, state)
     if jobs:
         return jobs[0]
     else:
         return 'No job found', 404
 
 
-def enqueue_job(owner_name, job_queue_id, jobjson):
-    return jt_jess.enqueue_job(owner_name, job_queue_id, jobjson)
+def enqueue_job(owner_name, queue_id, jobjson):
+    return jt_jess.enqueue_job(owner_name, queue_id, jobjson)
 
 
-def get_workers(owner_name, job_queue_id):
+def get_workers(owner_name, queue_id):
     pass
 
 
-def get_workers1(owner_name, job_queue_id):
+def get_workers1(owner_name, queue_id):
     pass
 
 
-def get_workers2(owner_name, job_queue_id):
+def get_workers2(owner_name, queue_id):
     pass
 
 
-def get_worker(owner_name, job_queue_id, worker_id):
+def get_worker(owner_name, queue_id, worker_id):
     pass
 
 
-def register_worker(owner_name, job_queue_id):
+def register_worker(owner_name, queue_id):
     pass
 
 
-def next_task(owner_name, job_queue_id, worker, job_id=None):
-    return jt_jess.next_task(owner_name, job_queue_id, worker, job_id)
+def next_task(owner_name, queue_id, worker, job_id=None):
+    return jt_jess.next_task(owner_name, queue_id, worker, job_id)
 
 
-def next_task_from_job(owner_name, job_queue_id, worker, job_id):
-    return next_task(owner_name, job_queue_id, worker, job_id)
+def next_task_from_job(owner_name, queue_id, worker, job_id):
+    return next_task(owner_name, queue_id, worker, job_id)
 
 
-def complete_task(owner_name, job_queue_id, job_id, task_name, result):
-    return jt_jess.complete_task(owner_name, job_queue_id, job_id, task_name, result)
+def complete_task(owner_name, queue_id, job_id, task_name, result):
+    return jt_jess.complete_task(owner_name, queue_id, job_id, task_name, result)
 
 
-def fail_task(owner_name, job_queue_id, job_id, task_name, result):
+def fail_task(owner_name, queue_id, job_id, task_name, result):
     pass
 
 
-def get_job_queues(owner_name, workflow_name=None, workflow_version=None):
+def get_queues(owner_name, workflow_name=None, workflow_version=None):
     if workflow_name and '.' in workflow_name:
         if len(workflow_name.split('.')) > 2:
             return 'Value for workflow name parameter can not have more than two dots (.)', 400
@@ -69,7 +69,7 @@ def get_job_queues(owner_name, workflow_name=None, workflow_version=None):
         workflow_owner_name = owner_name
 
     try:
-        workflows = jt_jess.get_job_queues(owner_name, workflow_name, workflow_version, workflow_owner_name)
+        workflows = jt_jess.get_queues(owner_name, workflow_name, workflow_version, workflow_owner_name)
     except OwnerNameNotFound as err:
         return str(err), 404
     except AMSNotAvailable as err:
@@ -82,9 +82,9 @@ def get_job_queues(owner_name, workflow_name=None, workflow_version=None):
     return workflows or ('No workflow job queue found', 404)
 
 
-def get_job_queues1(owner_name):
+def get_queues1(owner_name):
     try:
-        workflows = get_job_queues(owner_name)
+        workflows = get_queues(owner_name)
     except OwnerNameNotFound as err:
         return str(err), 404
     except AMSNotAvailable as err:
@@ -97,9 +97,9 @@ def get_job_queues1(owner_name):
     return workflows or ('No workflow job queue found', 404)
 
 
-def get_job_queues2(owner_name, workflow_name):
+def get_queues2(owner_name, workflow_name):
     try:
-        workflows = get_job_queues(owner_name, workflow_name)
+        workflows = get_queues(owner_name, workflow_name)
     except OwnerNameNotFound as err:
         return str(err), 404
     except AMSNotAvailable as err:
@@ -112,15 +112,15 @@ def get_job_queues2(owner_name, workflow_name):
     return workflows or ('No workflow job queue found', 404)
 
 
-def get_job_queues3(job_queue_id):
+def get_queues3(queue_id):
     pass
 
 
-def get_job_queues4(owner_name, job_queue_id):
+def get_queues4(owner_name, queue_id):
     pass
 
 
-def get_job_summary(owner_name, job_queue_id):
+def get_job_summary(owner_name, queue_id):
     pass
 
 
@@ -128,15 +128,15 @@ def job_action(owner_name):
     pass
 
 
-def job_queue_action(owner_name):
+def queue_action(owner_name):
     pass
 
 
-def worker_action(owner_name, job_queue_id, worker_id):
+def worker_action(owner_name, queue_id, worker_id):
     return
 
 
-def register_job_queue(owner_name, owner_type='org'):
+def register_queue(owner_name, owner_type='org'):
     exists = jt_jess.get_owner(owner_name)
     if exists:
         return NoContent, 409
@@ -144,7 +144,7 @@ def register_job_queue(owner_name, owner_type='org'):
         return jt_jess.create_owner(owner_name, owner_type)
 
 
-def register_job_queue1():
+def register_queue1():
     pass
 
 
