# jt_jess/__init__.py
@@ -1,1 +1,1 @@
-from .jess import get_job_queues, get_jobs, enqueue_job, next_task, complete_task
+from .jess import get_queues, get_jobs, enqueue_job, next_task, complete_task
