# swagger.yaml
@@ -11,35 +11,35 @@ security:
   # (only active if the TOKENINFO_URL environment variable is set)
   - oauth2: [uid]
 paths:
-  /job_queues/owner/{owner_name}/job_queue/{job_queue_id}:
+  /queues/owner/{owner_name}/queue/{queue_id}:
     get:
-      tags: [Job Queues]
-      operationId: app.get_job_queues4
-      summary: Get info for job queue under a given owner and job_queue_id
+      tags: [Queues]
+      operationId: app.get_queues4
+      summary: Get info for job queue under a given owner and queue_id
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
       responses:
         200:
           description: Return job queues for the specified owner
           schema:
             type: array
-  /job_queues/owner/{owner_name}:
+  /queues/owner/{owner_name}:
     get:
-      tags: [Job Queues]
-      operationId: app.get_job_queues1
+      tags: [Queues]
+      operationId: app.get_queues1
       summary: Get all job queues under a given owner
       parameters:
         - $ref: '#/parameters/owner_name'
       responses:
         200:
-          description: Return job queues for the specified owner
+          description: Return Queues for the specified owner
           schema:
             type: array
-  /job_queues/owner/{owner_name}/workflow/{workflow_name}:
+  /queues/owner/{owner_name}/workflow/{workflow_name}:
     get:
-      tags: [Job Queues]
-      operationId: app.get_job_queues2
+      tags: [Queues]
+      operationId: app.get_queues2
       summary: Get all job queues under a given owner and workflow_name
       parameters:
         - $ref: '#/parameters/owner_name'
@@ -49,10 +49,10 @@ paths:
           description: Return job queues for a given owner and workflow_name
           schema:
             type: array
-  /job_queues/owner/{owner_name}/workflow/{workflow_name}/ver/{workflow_version}:
+  /queues/owner/{owner_name}/workflow/{workflow_name}/ver/{workflow_version}:
     get:
-      tags: [Job Queues]
-      operationId: app.get_job_queues
+      tags: [Queues]
+      operationId: app.get_queues
       summary: Get all job queues for given owner, workflow_name and version
       parameters:
         - $ref: '#/parameters/owner_name'
@@ -64,14 +64,14 @@ paths:
           schema:
             type: array
     post:
-      tags: [Job Queues]
-      operationId: app.register_job_queue1
+      tags: [Queues]
+      operationId: app.register_queue1
       summary: Register a job queue under a given owner, workflow_name and version
       parameters:
         - $ref: '#/parameters/owner_name'
         - $ref: '#/parameters/workflow_name'
         - $ref: '#/parameters/workflow_version'
-        - name: job_queue
+        - name: queue
           in: body
           schema:
             $ref: '#/definitions/JobQueue'
@@ -82,23 +82,23 @@ paths:
             $ref: '#/definitions/JobQueue'
         409:
           description: Workflow registration failed
-  /job_queues/id/{job_queue_id}:
+  /queues/id/{queue_id}:
     get:
-      tags: [Job Queues]
-      operationId: app.get_job_queues3
+      tags: [Queues]
+      operationId: app.get_queues3
       summary: Get job queue info by job queue ID
       parameters:
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
       responses:
         204:
           description: Action performed
-  /job_queues/id/{job_queue_id}/action:
+  /queues/id/{queue_id}/action:
     put:
-      tags: [Job Queues]
-      operationId: app.job_queue_action
+      tags: [Queues]
+      operationId: app.queue_action
       summary: Perform an action on a job queue, eg, pause, resume
       parameters:
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: action
           in: body
           required: true
@@ -107,14 +107,14 @@ paths:
       responses:
         204:
           description: Action performed
-  /jobs/owner/{owner_name}/job_queue/{job_queue_id}:
+  /jobs/owner/{owner_name}/queue/{queue_id}:
     get:
       tags: [Jobs]
       operationId: app.get_jobs
       summary: Get jobs in a job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: state
           type: string
           in: query
@@ -128,7 +128,7 @@ paths:
       summary: Enqueue a job in a given job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: jobjson
           in: body
           schema:
@@ -140,14 +140,14 @@ paths:
             $ref: '#/definitions/JobJSON'
         409:
           description: Job enqueueing failed
-  /jobs/owner/{owner_name}/job_queue/{job_queue_id}/summary:
+  /jobs/owner/{owner_name}/queue/{queue_id}/summary:
     get:
       tags: [Jobs]
       operationId: app.get_job_summary
       summary: Get summary information on jobs in a job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: state
           type: string
           in: query
@@ -155,14 +155,14 @@ paths:
       responses:
         200:
           description: Return jobs
-  /jobs/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}:
+  /jobs/owner/{owner_name}/queue/{queue_id}/job/{job_id}:
     get:
       tags: [Jobs]
       operationId: app.get_job
       summary: Get detail for a given job
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: job_id
           in: path
           type: string
@@ -175,14 +175,14 @@ paths:
       responses:
         200:
           description: Return job
-  /jobs/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}/action:
+  /jobs/owner/{owner_name}/queue/{queue_id}/job/{job_id}/action:
     put:
       tags: [Jobs]
       operationId: app.job_action
       summary: Perform an action on a job, eg, pause, resume, cancel ...
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/job_id'
         - name: action
           in: body
@@ -213,14 +213,14 @@ paths:
       responses:
         200:
           description: Return workers
-  /workers/owner/{owner_name}/job_queue/{job_queue_id}:
+  /workers/owner/{owner_name}/queue/{queue_id}:
     get:
       tags: [Workers]
       operationId: app.get_workers
       summary: Get workers registered for a job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
       responses:
         200:
           description: Return workers
@@ -230,7 +230,7 @@ paths:
       summary: Register a worker for a job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: worker
           in: body
           schema:
@@ -238,28 +238,28 @@ paths:
       responses:
         200:
           description: Worker registered
-  /workers/owner/{owner_name}/job_queue/{job_queue_id}/worker/{worker_id}:
+  /workers/owner/{owner_name}/queue/{queue_id}/worker/{worker_id}:
     get:
       tags: [Workers]
       operationId: app.get_worker
       summary: Get detail of a given worker registered for a job queue
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/worker_id'
       responses:
         200:
           description: Return worker
           schema:
             $ref: '#/definitions/Worker'
-  /workers/owner/{owner_name}/job_queue/{job_queue_id}/worker/{worker_id}/action:
+  /workers/owner/{owner_name}/queue/{queue_id}/worker/{worker_id}/action:
     put:
       tags: [Workers]
       operationId: app.worker_action
       summary: Perform an action on a worker, eg, pause, resume
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/worker_id'
         - name: action
           in: body
@@ -269,26 +269,26 @@ paths:
       responses:
         204:
           description: Action performed
-  /tasks/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}:  # may not need this, get job should be sufficient
+  /tasks/owner/{owner_name}/queue/{queue_id}/job/{job_id}:  # may not need this, get job should be sufficient
     get:
       tags: [Tasks]
       operationId: app.get_tasks
       summary: List all tasks for a given job
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/job_id'
       responses:
         200:
           description: Return tasks
-  /tasks/owner/{owner_name}/job_queue/{job_queue_id}/next_task:
+  /tasks/owner/{owner_name}/queue/{queue_id}/next_task:
     put:
       tags: [Tasks]
       operationId: app.next_task
       summary: Worker asks for the next task to run
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - name: worker
           in: body
           schema:
@@ -298,14 +298,14 @@ paths:
           description: Task assigned
         404:
           description: No task to run
-  /tasks/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}/next_task:
+  /tasks/owner/{owner_name}/queue/{queue_id}/job/{job_id}/next_task:
     put:
       tags: [Tasks]
       operationId: app.next_task_from_job
       summary: Worker asks for the next task from a given job to run
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/job_id'
         - name: worker
           in: body
@@ -316,14 +316,14 @@ paths:
           description: Task assigned
         404:
           description: No task to run
-  /tasks/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}/task/{task_name}/task_complete:
+  /tasks/owner/{owner_name}/queue/{queue_id}/job/{job_id}/task/{task_name}/task_complete:
     put:
       tags: [Tasks]
       operationId: app.complete_task
       summary: Worker reports completion of a task
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/job_id'
         - $ref: '#/parameters/task_name'
         - name: result
@@ -334,14 +334,14 @@ paths:
       responses:
         204:
           description: Action performed
-  /tasks/owner/{owner_name}/job_queue/{job_queue_id}/job/{job_id}/task/{task_name}/task_fail:
+  /tasks/owner/{owner_name}/queue/{queue_id}/job/{job_id}/task/{task_name}/task_fail:
     put:
       tags: [Tasks]
       operationId: app.fail_task
       summary: Worker reports failure of a task
       parameters:
         - $ref: '#/parameters/owner_name'
-        - $ref: '#/parameters/job_queue_id'
+        - $ref: '#/parameters/queue_id'
         - $ref: '#/parameters/job_id'
         - $ref: '#/parameters/task_name'
         - name: result
@@ -382,8 +382,8 @@ parameters:
     type: string
     required: true
     pattern: "^[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}$"
-  job_queue_id:
-    name: job_queue_id
+  queue_id:
+    name: queue_id
     description: Unique ID for a job queue
     in: path
     type: string
